i forgot what i added